--- a/pom.xml
+++ b/pom.xml
@@ -49,14 +49,13 @@
           <username>username</username>
           <password>password</password>
         </configuration>
-          <dependencies>
-    <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-      <version>2.3.232</version>
-    </dependency>
-          </dependencies>
-
+        <dependencies>
+<!--        <dependency>-->
+<!--          <groupId>com.h2database</groupId>-->
+<!--          <artifactId>h2</artifactId>-->
+<!--          <version>2.3.232</version>-->
+<!--        </dependency>-->
+        </dependencies>
       </plugin>
     </plugins>
   </build>
