--- a/pom.xml
+++ b/pom.xml
@@ -16,12 +16,12 @@
   </properties>
 
   <dependencies>
-<!--    <dependency>-->
-<!--      <groupId>com.h2database</groupId>-->
-<!--      <artifactId>h2</artifactId>-->
-<!--      <version>2.3.232</version>-->
-<!--      <scope>compile</scope>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>2.3.232</version>
+      <scope>compile</scope>
+    </dependency>
 <!--    <dependency>-->
 <!--      <groupId>junit</groupId>-->
 <!--      <artifactId>junit</artifactId>-->
