--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
   <url>https://normalsql.org</url>
 
   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.release>21</maven.compiler.release>
   </properties>
 
